--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,14 @@ proguard/
 captures/
 
 # Intellij
-*.iml
-.idea/workspace.xml
 
-# Keystore files
-*.jks
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+
